Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20272

NULL deref of out_clean_llog_fileset in nodemap_del()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      In nodemap_del() around line 4364, there's this check:

      if (fileset_prim_exists && !rc && !nodemap->nmf_fileset_use_iam &&
        !nodemap->nm_dyn)
        *out_clean_llog_fileset = true;

      But nodemap_del() is called with NULL for that param at line 4311 (nodemap_del(nm->nm_name, NULL)). The other two spots in the same function do guard with && out_clean_llog_fileset before dereferencing, so it looks like this one just got missed?

       

      Discovered by code inspect.

            skoyama Sohei Koyama
            skoyama Sohei Koyama
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: