LU-20272 nodemap: fix NULL deref in nodemap_del()

nodemap_del() can be called with out_clean_llog_fileset=NULL, but
the pointer is dereferenced without a NULL guard. Add the guard,
consistent with other out_clean_llog_fileset uses in the file.

Fixes: c6e12f54dc95 ("LU-18357 ptlrpc: Fix fileset llog compatibility on nodemaps")
Fixes: 40cd140b8597 ("LU-18357 ptlrpc: Support add and del alternate filesets")
Signed-off-by: Sohei Koyama <skoyama@ddn.com>
Change-Id: I165f672b868852916bf7b3ecf1a5a64bdadd2ff7
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65951
Reviewed-by: Marc Vef <mvef@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>